[gd_scene load_steps=9 format=2]

[ext_resource path="res://grav.gd" type="Script" id=1]
[ext_resource path="res://Electric_Eel.png" type="Texture" id=2]
[ext_resource path="res://Untitled drawing (3).png" type="Texture" id=3]
[ext_resource path="res://Untitled drawing (4).png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 45 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 45 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[node name="Node2D" type="Node2D"]

[node name="body" type="RigidBody2D" parent="."]
mass = 20.0
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource( 1 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="body"]
remote_path = NodePath("../..")
update_rotation = false

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="body"]
one_shot = true

[node name="hurtbox" type="Area2D" parent="body"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/hurtbox"]
shape = SubResource( 8 )

[node name="Sprite2" type="Sprite" parent="body"]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="short" type="Timer" parent="body"]
wait_time = 0.2
one_shot = true

[node name="TE" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.12, 0.12 )
z_index = 1
texture = ExtResource( 3 )

[node name="hb" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = -54.0
margin_right = 25.0
margin_bottom = -50.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
percent_visible = false

[connection signal="timeout" from="body/Timer" to="body" method="_on_Timer_timeout"]
[connection signal="area_entered" from="body/hurtbox" to="body" method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="body/short" to="body" method="_on_short_timeout"]
